# medchain

./: Anchor.toml  README.md
app/: index.html  package-lock.json  package.json
app/src/: App.vue
app/src/components/: EnterButton.vue  NavigationBar.vue  PatientList.vue  PatientListItem.vue  PatientProfile.vue  SearchBar.vue  WalletConnector.vue
app/src/components/icons/: AddIcon.vue  BellIcon.vue  CalendarIcon.vue  ChatIcon.vue  CoinIcon.vue  DeleteIcon.vue  DiagonalArrowIcon.vue  DownloadIcon.vue  EditIcon.vue  EyeIcon.vue  FilterIcon.vue  GreaterThanIcon.vue  HomeIcon.vue  LessThanIcon.vue  MoreIcon.vue  PeopleIcon.vue  PhoneIcon.vue  SearchIcon.vue  SettingsIcon.vue  SortIcon.vue  StethoscopeIcon.vue  UserHeartIcon.vue
app/src/composables/: useAnchorProgram.ts  useKeyManagement.ts  useMedicalRecords.ts  useWallet.ts
app/src/router/: index.ts
app/src/utils/: crypto.ts  date.ts  file.ts  formatDate.ts  ipfs.ts  type.ts
app/src/views/: Dashboard.vue  Patients.vue  Records.vue
programs/medchain/: Cargo.toml
programs/medchain/src/: constants.rs  error.rs  errors.rs  events.rs  instructions.rs  lib.rs  state.rs
programs/medchain/src/instructions/: add_medical_record.rs  grant_access.rs  initialize_doctor.rs  initialize_patient.rs  mod.rs  rotate_record_key.rs  update_doctor_key.rs
tests/: healthchain.ts  medchain.ts
tests/unit/: medical_records.test.ts  patient_accounts.test.ts
tests/utils/: wallet-manager.ts
